--- a/.github/workflows/download_csv.yml
+++ b/.github/workflows/download_csv.yml
@@ -30,14 +30,14 @@ jobs:
       - name: Run download script
         run: |
           source venv/bin/activate
-          python download_csv.py
+          python download_file.py
       
       - name: Commit and push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add data/*.csv
-          git commit -m 'Automated CSV download'
+          git add data/*.pdf
+          git commit -m 'Automated file download'
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
