--- a/.github/workflows/download_csv.yml
+++ b/.github/workflows/download_csv.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          
+          git add data/*.pdf
           git commit -m 'Automated file download'
           git push
         env:
